<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_whole"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <com.kaidongyuan.app.basemodule.widget.SlidingTitleView
        android:id="@+id/feedback_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </com.kaidongyuan.app.basemodule.widget.SlidingTitleView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/contact"
                    android:textColor="#999999"
                    android:textSize="17sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="30dp"
                    android:background="#E2E2E2" />

                <EditText
                    android:id="@+id/feedback_contact_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_mailbox"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textColorHint="#CCCCCC" />
            </LinearLayout>

            <EditText
                android:id="@+id/input_feedback"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:background="#fff"
                android:gravity="top"
                android:hint="@string/feedback_hint_text"
                android:padding="16dp"
                android:singleLine="false"
                android:textColorHint="#50000000"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16sp"
                android:background="@drawable/login_btn_round_bg"
                android:onClick="submitFeedBack"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>