<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_whole"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.kaidongyuan.app.basemodule.widget.SlidingTitleView
        android:id="@+id/setting_title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/contact"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_check_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:visibility="gone"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/check_report"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />``

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="定位并上传坐标"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_location"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_location_status"
                    android:tag="locate" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_update_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/update_password"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_manage_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/manage_info"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_my_evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:visibility="gone"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/my_evaluate"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />


            <RelativeLayout
                 android:id="@+id/rl_offlinemap"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#fff"
                 android:clickable="true">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@null"
                     android:padding="16dp"
                     android:singleLine="true"
                     android:text="@string/tool"
                     android:textColor="#333333"
                     android:textSize="17sp"
                     android:textStyle="bold" />

                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:contentDescription="@null"
                     android:padding="10dp"
                     android:src="@drawable/more" />
             </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />


            <RelativeLayout
                android:id="@+id/rl_feed_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:clickable="true"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="@string/feed_back"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_check_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="版本更新"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version_name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <RelativeLayout
                android:id="@+id/rl_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:padding="16dp"
                    android:singleLine="true"
                    android:text="关于"
                    android:textColor="#333333"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="#E2E2E2" />

            <Button
                android:id="@+id/exit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/cancel_login_btn_round_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cancel_login"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>